--- a/AS Autodoc.csproj
+++ b/AS Autodoc.csproj
@@ -72,6 +72,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Автозапчасти в магазине для продавца.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Автозапчасти в магазине для продавца.Designer.cs">
+      <DependentUpon>Автозапчасти в магазине для продавца.cs</DependentUpon>
+    </Compile>
     <Compile Include="Пользовательские сесссии.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -333,6 +339,9 @@
     <Compile Include="Forms\Редактирование отдела.Designer.cs">
       <DependentUpon>Редактирование отдела.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Автозапчасти в магазине для продавца.resx">
+      <DependentUpon>Автозапчасти в магазине для продавца.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DeliveryReport.rdlc" />
     <EmbeddedResource Include="Пользовательские сесссии.resx">
       <DependentUpon>Пользовательские сесссии.cs</DependentUpon>
